<resources>
    <string name="app_name">Gratters</string>
    <string name="first_header">Select category:</string>
    <string name="textValentineDay">Valentine`s day</string>
    <string name="textNewYear">New Year</string>
    <string name="text23February">Father`s day</string>
    <string name="text8March">Woman`s day</string>
    <string name="textDays">days</string>
    <string name="textNow">now</string>
    <string name="textBtnSend">Send</string>
    <string name="textBtnNext">Next</string>
    <string name="textBtnPrev">Before</string>
    <string name="textFinish">is done</string>
    <string name="btnTextHolidayCalendar">Holidays Calendar</string>
    <string name="action_settings">Settings</string>
    <string name="about_app">About</string>
    <string name="textBirthday">Birthday</string>
    <string name="forHim">For Him</string>
    <string name="forHer">For Her</string>
    <string name="universal">Universal</string>
    <string name="textFldEmpty">
            С Новым годом поздравляю\n
            И от всей души желаю\n
            Веселиться и смеяться,\n
            Ни на что не обижаться,\n
            Жить легко и без забот\n
            Весь грядущий новый год.\n\n

            Наслаждаться каждым мигом\n
            И дарить свое тепло,\n
            Быть всегда на позитиве,\n
            Чтоб всегда во всём везло!\n\n

            С Новым годом! С новым счастьем!\n
            Смеха, мира и добра!\n
            Пусть обходят все ненастья,\n
            Жизнь одарит вас сполна!\n</string>
    <string name="textTomorrow">tomorrow</string>

    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="few">%d days</item>
        <item quantity="many">%d days</item>
    </plurals>

    <string-array name="newYear">
        <item>
            Welcome New Year…\n
            We look forward to you\n
            A year of wonderful happiness\n
            A year of good health\n
            A year of great success\n
            A year of incredibly good luck\n
            A year of continuous fun\n
            A year of world peace\n
        </item>
        <item>
            Having You Means That\n
            I Have Someone To Disturb\n
            And Call In Time Of Need.\n
            As We Watch The Curtains Of This Year Fall,\n
            It Means That Another Year Sets\n
            In Giving Me Another Chance To Disturb You More.\n
        </item>
    </string-array>
    <string-array name="valentine">
        <item>
            С днем Святого Валентина\n
            Поздравляем всех влюбленных.\n
            Пусть любовь будет взаимной,\n
            Чувств вам нежных, окрыленных.\n\n

            Пусть любовь вас согревает,\n
            Несет радость и тепло,\n
            Амур в воздухе летает,\n
            Дарит счастье и добро!\n
        </item>
        <item>
            Пускай столетье прочь уйдёт\n
            И высохнут моря,\n
            Моя любовь тебя найдёт,\n
            Когда придёт заря.\n
            Ты не грусти, моя любовь,\n
            В стране далёких грёз,\n
            К тебе вернусь, и будем вновь\n
            С тобой средь ярких звёзд\n
        </item>
    </string-array>
    <string-array name="womansDay">
        <item>
            Так много ласки и тепла,\n
            Загадки, нежности, терпения\n
            Природа женщине дала.\n
            И всё по праву, без сомнения!\n\n

            Так будьте ж вы всегда красивы,\n
            Глаза пускай горят огнём,\n
            Здоровы, молоды, любимы.\n
            С Международным женским днем!\n
        </item>
        <item>
            Прекрасный день календаря —\n
            8 Марта — женский праздник.\n
            Мы поздравляем от души\n
            Прекрасных дам, желаем счастья!\n\n

            Погоды теплой вам в семье,\n
            Любви, добра и понимания,\n
            Комфорта, нежности в душе\n
            И каждодневного внимания!\n\n

            Пусть будет радостной весна,\n
            А солнце светит безгранично.\n
            Горят от счастья пусть глаза,\n
            Чтоб было всё отлично!\n
        </item>
    </string-array>
    <string-array name="mansDay">
        <item>
            С праздником мужества, с праздником чести,\n
            С праздником силы поздравить хотим.\n
            Будьте вы сильными, будьте вы смелыми,\n
            Праздник февральский — для вас, для мужчин.\n\n

            Будьте опорой всегда и поддержкой\n
            Женам своим, матерям и сестре.\n
            Пусть никакие невзгоды, несчастья\n
            Не повстречаются в жизни нигде!\n
        </item>
        <item>
            В День защитника Отечества\n
            Пожелаю сил и мудрости,\n
            Воли, выдержки, терпения,\n
            Чтоб преодолеть все трудности.\n\n

            Неба ясного и мирного,\n
            Если слез — то только радостных,\n
            Жизни с множеством событий\n
            И воспоминаний сладостных.\n\n

            Дружбы крепкой, без предательства,\n
            Всех желаний исполнения,\n
            Чтобы целей добивались вы\n
            И не знали поражения.\n
        </item>
    </string-array>
    <string-array name="birthday">
        <item>
            Тебе желаю море счастья,\n
            Улыбок, солнца и тепла.\n
            Чтоб жизнь была еще прекрасней,\n
            Не знать печали никогда!\n\n

            Пусть в доме будет только радость,\n
            Уют, достаток и покой.\n
            Друзья, родные будут рядом,\n
            Беда обходит стороной!\n\n

            Здоровья крепкого желаю\n
            И легких жизненных дорог.\n
            И пусть всегда, благословляя,\n
            Тебя хранит твой ангелок!\n
        </item>
        <item>
            Желаю радости, успеха,\n
            Здоровья крепкого вагон,\n
            Центнер любви, три тонны смеха,\n
            Моментов счастья — миллион,\n\n

            Событий ярких, интересных,\n
            Друзей, проверенных в делах,\n
            Эмоций светлых и чудесных.\n
            И волшебства не только в снах!\n
        </item>
    </string-array>
</resources>