<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.solandme.universal_congratulator.MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/first_header"
                android:textSize="@dimen/txtSize" />

            <RelativeLayout
                android:id="@+id/newYear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#B2EBF2"
                android:onClick="onClick">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/ic_december" />

                <TextView
                    android:id="@+id/textNewYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/imageView2"
                    android:layout_toRightOf="@+id/imageView2"
                    android:text="@string/textNewYear"
                    android:textSize="@dimen/txtSize"
                    android:textStyle="normal|italic" />

                <TextView
                    android:id="@+id/textDaysForNewYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"
                    android:layout_toEndOf="@+id/textNewYear"
                    android:layout_toRightOf="@+id/textNewYear"
                    android:text="@string/textDays"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/txtSize" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/valentine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F8BBD0"
                android:onClick="onClick">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="left|center"
                    android:src="@drawable/ic_february" />

                <TextView
                    android:id="@+id/textValentineDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center|right"
                    android:layout_toEndOf="@+id/imageView"
                    android:layout_toRightOf="@+id/imageView"
                    android:text="@string/textValentineDay"
                    android:textSize="@dimen/txtSize"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textDaysForValentine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"
                    android:layout_toEndOf="@+id/textValentineDay"
                    android:layout_toRightOf="@+id/textValentineDay"
                    android:text="@string/textDays"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/txtSize" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/mansDay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFF9C4"
                android:onClick="onClick">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="left|center"
                    android:src="@drawable/ic_23february" />

                <TextView
                    android:id="@+id/text23February"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/imageView3"
                    android:layout_toRightOf="@+id/imageView3"
                    android:text="@string/text23February"
                    android:textSize="@dimen/txtSize"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textDaysForMansDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"
                    android:layout_toEndOf="@+id/text23February"
                    android:layout_toRightOf="@+id/text23February"
                    android:text="@string/textDays"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/txtSize" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/womansDay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#DCEDC8"
                android:onClick="onClick">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="left|center"
                    android:src="@drawable/ic_8march" />

                <TextView
                    android:id="@+id/text8March"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/imageView4"
                    android:layout_toRightOf="@+id/imageView4"
                    android:text="@string/text8March"
                    android:textSize="@dimen/txtSize"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textDaysForWomanDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"
                    android:layout_toEndOf="@+id/text8March"
                    android:layout_toRightOf="@+id/text8March"
                    android:text="@string/textDays"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/txtSize" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnHolidaysCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/scrollView"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/scrollView"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="40dp"
        android:background="#9fa8da"
        android:onClick="onClick"
        android:padding="8dp"
        android:text="@string/btnTextHolidayCalendar" />
</RelativeLayout>
